[metadata]
name = colcon-ros-nimble
version = attr: colcon_ros_nimble.__version__
maintainer = Pylgos
maintainer_email = 43234674+Pylgos@users.noreply.github.com
license = TODO: License declaration
description = TODO: Package description

[options]
install_requires =
  colcon-core
  # to set an environment variable when a package installs a library
  colcon-library-path
  colcon-ros
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-docstrings
  flake8-import-order
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    nimble_args = colcon_ros_nimble.argcomplete_completer.nimble_args:NimbleArgcompleteCompleter
colcon_core.package_identification =
    ros.ament_nimble = colcon_ros_nimble.package_identification.ament_nimble:AmentNimblePackageIdentification
colcon_core.task.build =
    ros.ament_nimble = colcon_ros_nimble.task.ament_nimble.build:AmentNimbleBuildTask
colcon_core.task.test =
    ros.ament_nimble = colcon_ros_nimble.task.ament_nimble.test:NimbleTestTask

[flake8]
import-order-style = google
